chore: try to fix jvm