@@ -52,6 +52,7 @@ kotlin {
 }
 
 application {
+    applicationDefaultJvmArgs = listOf("--add-opens", "java.base/java.nio=ALL-UNNAMED")
     mainClass.set("cc.unitmesh.importer.MainKt")
 }
 
